womtool/src/test/resources/validate/cwl/cwlV1_0/invalid/worse/error.txt
ERROR: Finished parsing without consuming all tokens.

not even a header
^
